--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <manifold.version>2024.1.11</manifold.version>
-        <maven.compiler.source>22</maven.compiler.source>
-        <maven.compiler.target>22</maven.compiler.target>
+        <manifold.version>2024.1.44</manifold.version>
+        <maven.compiler.source>23</maven.compiler.source>
+        <maven.compiler.target>23</maven.compiler.target>
     </properties>
 
     <build>
@@ -35,6 +35,11 @@
                             <version>${manifold.version}</version>
                         </path>
                         <path>
+                            <groupId>systems.manifold</groupId>
+                            <artifactId>manifold-delegation</artifactId>
+                            <version>${manifold.version}</version>
+                        </path>
+                        <path>
                             <groupId>com.h2database</groupId>
                             <artifactId>h2</artifactId>
                             <version>2.1.214</version>
@@ -57,9 +62,14 @@
             <version>${manifold.version}</version>
         </dependency>
         <dependency>
+            <groupId>systems.manifold</groupId>
+            <artifactId>manifold-delegation-rt</artifactId>
+            <version>${manifold.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>2.1.214</version>
+            <version>2.2.220</version>
         </dependency>
     </dependencies>
 </project>
