--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <manifold.version>2024.1.44</manifold.version>
+        <manifold.version>2025.1.4</manifold.version>
         <maven.compiler.source>23</maven.compiler.source>
         <maven.compiler.target>23</maven.compiler.target>
     </properties>
@@ -40,6 +40,11 @@
                             <version>${manifold.version}</version>
                         </path>
                         <path>
+                            <groupId>systems.manifold</groupId>
+                            <artifactId>manifold-props</artifactId>
+                            <version>${manifold.version}</version>
+                        </path>
+                        <path>
                             <groupId>com.h2database</groupId>
                             <artifactId>h2</artifactId>
                             <version>2.1.214</version>
@@ -64,6 +69,11 @@
         <dependency>
             <groupId>systems.manifold</groupId>
             <artifactId>manifold-delegation-rt</artifactId>
+            <version>${manifold.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>systems.manifold</groupId>
+            <artifactId>manifold-props-rt</artifactId>
             <version>${manifold.version}</version>
         </dependency>
         <dependency>
