--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <manifold.version>2025.1.4</manifold.version>
-        <maven.compiler.source>23</maven.compiler.source>
-        <maven.compiler.target>23</maven.compiler.target>
+        <manifold.version>2025.1.11</manifold.version>
+        <maven.compiler.source>24</maven.compiler.source>
+        <maven.compiler.target>24</maven.compiler.target>
     </properties>
 
     <build>
@@ -50,6 +50,11 @@
                             <version>${manifold.version}</version>
                         </path>
                         <path>
+                            <groupId>systems.manifold</groupId>
+                            <artifactId>manifold-ext</artifactId>
+                            <version>${manifold.version}</version>
+                        </path>
+                        <path>
                             <groupId>com.h2database</groupId>
                             <artifactId>h2</artifactId>
                             <version>2.1.214</version>
@@ -84,6 +89,11 @@
         <dependency>
             <groupId>systems.manifold</groupId>
             <artifactId>manifold-params-rt</artifactId>
+            <version>${manifold.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>systems.manifold</groupId>
+            <artifactId>manifold-ext-rt</artifactId>
             <version>${manifold.version}</version>
         </dependency>
         <dependency>
