--- a/pom.xml
+++ b/pom.xml
@@ -26,43 +26,13 @@
                     <annotationProcessorPaths>
                         <path>
                             <groupId>systems.manifold</groupId>
-                            <artifactId>manifold-sql</artifactId>
-                            <version>${manifold.version}</version>
-                        </path>
-                        <path>
-                            <groupId>systems.manifold</groupId>
-                            <artifactId>manifold-tuple</artifactId>
-                            <version>${manifold.version}</version>
-                        </path>
-                        <path>
-                            <groupId>systems.manifold</groupId>
-                            <artifactId>manifold-delegation</artifactId>
-                            <version>${manifold.version}</version>
-                        </path>
-                        <path>
-                            <groupId>systems.manifold</groupId>
-                            <artifactId>manifold-props</artifactId>
-                            <version>${manifold.version}</version>
-                        </path>
-                        <path>
-                            <groupId>systems.manifold</groupId>
                             <artifactId>manifold-params</artifactId>
                             <version>${manifold.version}</version>
                         </path>
                         <path>
-                            <groupId>systems.manifold</groupId>
-                            <artifactId>manifold-ext</artifactId>
-                            <version>${manifold.version}</version>
-                        </path>
-                        <path>
-                            <groupId>systems.manifold</groupId>
-                            <artifactId>manifold-strings</artifactId>
-                            <version>${manifold.version}</version>
-                        </path>
-                        <path>
-                            <groupId>com.h2database</groupId>
-                            <artifactId>h2</artifactId>
-                            <version>2.1.214</version>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>1.18.38</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
@@ -73,43 +43,8 @@
     <dependencies>
         <dependency>
             <groupId>systems.manifold</groupId>
-            <artifactId>manifold-sql-rt</artifactId>
-            <version>${manifold.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>systems.manifold</groupId>
-            <artifactId>manifold-tuple-rt</artifactId>
-            <version>${manifold.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>systems.manifold</groupId>
-            <artifactId>manifold-delegation-rt</artifactId>
-            <version>${manifold.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>systems.manifold</groupId>
-            <artifactId>manifold-props-rt</artifactId>
-            <version>${manifold.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>systems.manifold</groupId>
             <artifactId>manifold-params-rt</artifactId>
             <version>${manifold.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>systems.manifold</groupId>
-            <artifactId>manifold-ext-rt</artifactId>
-            <version>${manifold.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>2.2.220</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jspecify</groupId>
-            <artifactId>jspecify</artifactId>
-            <version>1.0.0</version>
         </dependency>
     </dependencies>
 </project>
